--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     <section class="information">
       <h2>Some random information</h2>
       <figure>
-      <div class="boxes">
-        <div class="box">
+      <figure class="boxes">
+        <figure class="box">
         <square>
             <figcaption>this is some subtext under an illustration or image</figcaption>
-         </div>
+        </figure>
         <div class="box">
         <square>
             <figcaption>this is some subtext under an illustration or image</figcaption>
